# fastapi_template

./: .gitignore  README.md  main.py  pyproject.toml  test.db
auth/: dependencies.py  router.py  service.py
core/: config.py  db.py  security.py
tests/: test_main.py
tests/auth/: test_service.py
tests/core/: test_sequrity.py
tests/users/: test_router.py  test_schemas.py
users/: models.py  router.py  schemas.py  service.py
